# jojo-scrapper

./: .gitignore  README.md  character.py  constanst.py  create_driver.py  get_basic_data.py  get_data.py  get_data_characters.py  get_data_stands.py  get_list.py  main.py  pyproject.toml  scrapper.py  test.py
bs/: constanst.py  get_data.py  main.py
constants/: constants.py  models.py  utils.py
get_data/: basic_data.py  characters.py  stands.py
se/: character.py  constanst.py  main.py
