[tool.poetry]
name = "jojo-scrapper"
version = "0.1.0"
description = ""
authors = ["axelolea <axelcedilloolea@gmail.com>"]
readme = "README.md"
packages = [{include = "jojo_scrapper"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
